<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/Bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="76dp"
            android:textStyle="bold" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/EncuentraElNumero"
            android:layout_width="350dp"
            android:layout_height="102dp"
            android:id="@+id/textView4" android:textAlignment="center"
            android:textSize="24sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:layout_width="372dp"
            android:layout_height="71dp"
            android:id="@+id/textView5"
            android:textSize="24sp" android:text="@string/DigiteCantidadIntentos"
            android:textAlignment="center" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <EditText
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:textAlignment="center"
            android:hint="@string/NumberImput" android:id="@+id/txtAttemptNumber"/>
    <Button
            android:text="@string/PLAYAGAIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="PlayAgain" tools:ignore="OnClick"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/txtAttemptNumber"/>
</androidx.constraintlayout.widget.ConstraintLayout>